created readme.md file and api reference.md file

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "vehicle-rental",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "npx tsx watch ./src/server.ts"
+    "dev": "npx tsx watch ./src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
